--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "bar",
+         "uid": "fb138578-f5d1-11e8-a0fe-0242ac110007",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"a3bb6370-812f-48cd-b3d0-bb85acc5913c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a3bb6370-812f-48cd-b3d0-bb85acc5913c\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"fb2b9dde-f5d1-11e8-a0fe-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"a3bb6370-812f-48cd-b3d0-bb85acc5913c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a3bb6370-812f-48cd-b3d0-bb85acc5913c\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"fb2b9dde-f5d1-11e8-a0fe-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "\n",
@@ -80,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +155,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_indices = None\n",
+    "city_indices = list(range(0, len(cities)))\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
   },
@@ -128,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,19 +210,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Pyeongchang',\n",
+       " '4. Marakesh',\n",
+       " '5. Albuquerque',\n",
+       " '6. Los Cabos',\n",
+       " '7. Greenville',\n",
+       " '8. Archipelago Sea',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names_and_ranks = [] \n",
+    "names_and_ranks = []\n",
+    "for index in city_indices:\n",
+    "    names_and_ranks.append(f'{index + 1}. {city_names[index]}')\n",
+    "\n",
+    "names_and_ranks\n",
+    "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12. Iguazu Falls'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
@@ -183,24 +276,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2891000,\n",
+       " 2800000,\n",
+       " 2581000,\n",
+       " 928850,\n",
+       " 559277,\n",
+       " 287651,\n",
+       " 84554,\n",
+       " 60000,\n",
+       " 32237,\n",
+       " 4000,\n",
+       " 1700,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for city in cities:\n",
+    "    city_populations.append(city['Population'])\n",
+    "    \n",
+    "city_populations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2891000\n",
+      "2800000\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "city_populations[0] # 2891000\n",
-    "city_populations[1] # 2800000\n",
-    "city_populations[-1] # 0"
+    "print(city_populations[0]) # 2891000\n",
+    "print(city_populations[1]) # 2800000\n",
+    "print(city_populations[-1]) # 0"
    ]
   },
   {
@@ -212,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,11 +352,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "f5e77ff0-f5e0-11e8-a0fe-0242ac110007",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000,
+          928850,
+          559277,
+          287651,
+          84554,
+          60000,
+          32237,
+          4000,
+          1700,
+          0
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"3dd89d28-ce59-4cdf-9a90-90558c3618fa\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3dd89d28-ce59-4cdf-9a90-90558c3618fa\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"f5f84498-f5e0-11e8-a0fe-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"3dd89d28-ce59-4cdf-9a90-90558c3618fa\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3dd89d28-ce59-4cdf-9a90-90558c3618fa\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"f5f84498-f5e0-11e8-a0fe-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
@@ -305,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
